minor spacing bugs

--- a/src/views/Home/styles/_arth-footer.sass
+++ b/src/views/Home/styles/_arth-footer.sass
@@ -1,16 +1,16 @@
 footer
   background: #1F1E1E
   z-index: 0
-  max-width: $max-width
-  margin: auto
-
   @media (max-width: 600px)
     padding: 0 16px
 
   .footer-content
     overflow: hidden
-    margin: 0 auto
     position: relative
+    padding: 56px 0
+    max-width: $max-width
+    margin: auto
+
 
     .top-most
       display: flex
@@ -62,7 +62,6 @@ footer
 
     .bottom-most
       align-items: center
-      padding-bottom: 56px
 
       .bottom-right
         display: flex
