--- a/src/views/Home/styles/_section-arth-features.sass
+++ b/src/views/Home/styles/_section-arth-features.sass
@@ -55,9 +55,11 @@
     border: 0
     padding: 40px
     align-items: center
+    min-height: 422px
     @media (max-width: 600px)
       padding: 40px 24px 32px 24px
       border-radius: 12px
+      min-height: auto
 
     &:nth-of-type(1)
       @media (max-width: 600px)
