--- a/src/views/Home/styles/_section-rate-info.sass
+++ b/src/views/Home/styles/_section-rate-info.sass
@@ -1,5 +1,6 @@
 #section-rate-info
   margin: 0 auto 160px auto
+  height: 597px
   @media (max-width: 600px)
     margin-bottom: 80px
     height: 879px
