--- a/src/views/Home/styles/_section-revolution.sass
+++ b/src/views/Home/styles/_section-revolution.sass
@@ -1,7 +1,7 @@
 #section-revolution
   max-width: $max-width
   margin: 0 auto
-  margin-bottom: 250px
+  margin-bottom: 160px
 
   @media (max-width: 600px)
     margin-bottom: 80px
